tests/snapshots/run_wpt_conformance__onnx_greaterOrEqual_float32_5D_tensor_and_broadcastable_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater_or_equal.https.any.js",
    "greaterOrEqual float32 5D tensor and broadcastable 0D scalar",
    "onnx",
    "PASS",
)
